--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,3 +1,7 @@
+.hide {
+  display: none;
+}
+
 #presentation-card {
   background-color: #073642;
 
@@ -53,4 +57,52 @@
   -ms-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+}
+
+#contact-form {
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  border: solid;
+  background: #6c71c4;
+  border-radius: 19px;
+  padding: 20px;
+  color: #fdf6e3;
+  min-width: 100px;
+}
+
+#contact-form label, #contact-form textarea {
+  margin: 10px;
+  display: block;
+}
+
+#contact-form .row label {
+  display: inline-block;
+  width: 20%;
+  text-align: right;
+}
+
+#contact-form .submit {
+	background-color: #2aa198;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+  color: #fdf6e3;
+	font-family:Arial;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+  margin: 9px 30px -7px 199px;
+}
+
+#contact-form .submit:hover {
+	background-color:#859900;
+}
+
+#contact-form .submit:active {
+	position:relative;
+	top:1px;
 }
