--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,7 +1,3 @@
-.hide {
-  display: none;
-}
-
 #presentation-card {
   background-color: #073642;
 
@@ -44,11 +40,11 @@
   float: left;
 }
 
-#presentation-card .hire-me-link {
+#presentation-card .hire-me {
   position: absolute;
   top: 28px;
   right: 1px;
-  color: red;
+  color: #d33682;
   font-size: 1.3em;
   font-weight: bold;
   text-decoration: none;
@@ -60,6 +56,7 @@
 }
 
 #contact-form {
+  display: none;
   position: absolute;
   top: 25%;
   left: 25%;
