Separate colors into its own file

--- a/_sass/_contact-form.sass
+++ b/_sass/_contact-form.sass
@@ -4,10 +4,10 @@
   top: 25%
   left: 25%
   border: solid
-  background: #6c71c4
+  background: $my_violet
   border-radius: 19px
   padding: 20px
-  color: #fdf6e3
+  color: $my_base3
   min-width: 100px
   label, textarea
     margin: 10px
@@ -24,7 +24,7 @@
     border: 1px solid #18ab29
     display: inline-block
     cursor: pointer
-    color: #fdf6e3
+    color: $my_base3
     font-family: Arial
     padding: 16px 31px
     text-decoration: none
