--- a/_sass/_presentation-card.sass
+++ b/_sass/_presentation-card.sass
@@ -1,5 +1,5 @@
 #presentation-card
-  background-color: #073642
+  background-color: $my_base02
   position: absolute
   left: 0
   top: 0
@@ -14,11 +14,11 @@
   h1
     padding: 1em
     text-align: center
-    color: #b58900
+    color: $my_yellow
     font-family: 'Oswald'
     font-size: 2em
   p
-    color: #fdf6e3
+    color: $my_base3
     font-family: 'Ubuntu'
   ul.social-icons
     list-style-type: none
@@ -31,7 +31,7 @@
     position: absolute
     top: 36px
     right: -5px
-    color: #d33682
+    color: $my_magneta
     font-size: 1.3em
     font-weight: bold
     text-decoration: none
