Change position of contact me button.

--- a/_sass/_presentation-card.sass
+++ b/_sass/_presentation-card.sass
@@ -13,6 +13,7 @@
   border-radius: 9px
   h1
     padding: 1em
+    padding-top: 0.5em
     text-align: center
     color: $my_yellow
     font-family: 'Oswald'
@@ -28,15 +29,11 @@
       display: inline
       float: left
   .hire-me
-    position: absolute
-    top: 36px
-    right: -5px
+    display: block
+    width: 150px
+    margin-left: auto
+    margin-right: auto
     color: $my_magneta
-    font-size: 1.3em
+    font-size: 1.7em
     font-weight: bold
     text-decoration: none
-    -webkit-transform: rotate(45deg)
-    -moz-transform: rotate(45deg)
-    -ms-transform: rotate(45deg)
-    -o-transform: rotate(45deg)
-    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3)
