--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="/assets/stylesheets/main.css" type="text/css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Ubuntu+Mono" type="text/css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" type="text/css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" crossorigin="anonymous">
   <script src="http://code.jquery.com/jquery-2.2.1.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
   <!-- Google Analytics -->
   <script>
