--- a/_sass/_contact-form.sass
+++ b/_sass/_contact-form.sass
@@ -1,5 +1,14 @@
-#contact-form
+.overlay
   display: none
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  background-color: rgba(0,0,0,0.7)
+  z-index: 10000
+
+#contact-form
   position: absolute
   top: 25%
   left: 25%
