Use bootstrap grid to make site responsive

--- a/_sass/_presentation-card.sass
+++ b/_sass/_presentation-card.sass
@@ -1,20 +1,13 @@
 #presentation-card
   background-color: $my_base02
-  position: absolute
-  left: 0
-  top: 0
-  bottom: 0
-  right: 0
-  margin: auto
-  width: 400px
-  height: 450px
   padding: 2em
   box-shadow: 3px 3px 6px 3px rgba(0, 0, 0, 0.8)
   border-radius: 9px
+  text-align: center
+  margin-top: 5%
   h1
     padding: 1em
     padding-top: 0.5em
-    text-align: center
     color: $my_yellow
     font-family: 'Oswald'
     font-size: 2em
@@ -27,12 +20,7 @@
       padding: 2em 0px
       margin: 10px
       display: inline
-      float: left
   .hire-me
-    display: block
-    width: 150px
-    margin-left: auto
-    margin-right: auto
     color: $my_magneta
     font-size: 1.7em
     font-weight: bold
