Change contact form and social icons
* Add font awesome
* Remove overlay for contact form
* Add new section for contact form
* Remove html reset since it is no needed with bootstrap
* Use font awesome for social icons

--- a/_sass/_contact-form.sass
+++ b/_sass/_contact-form.sass
@@ -1,46 +1,8 @@
-.overlay
-  display: none
-  position: fixed
-  top: 0
-  left: 0
-  width: 100%
-  height: 100%
-  background-color: rgba(0,0,0,0.7)
-  z-index: 10000
+.contact-form-container
+  background: $my_base03
 
 #contact-form
-  position: absolute
-  top: 25%
-  left: 25%
-  border: solid
-  background: $my_violet
-  border-radius: 19px
   padding: 20px
   color: $my_base3
-  min-width: 100px
-  label, textarea
-    margin: 10px
-    display: block
-  .row label
-    display: inline-block
-    width: 20%
-    text-align: right
-  .submit
-    background-color: #2aa198
-    -moz-border-radius: 28px
-    -webkit-border-radius: 28px
-    border-radius: 28px
-    border: 1px solid #18ab29
-    display: inline-block
-    cursor: pointer
-    color: $my_base3
-    font-family: Arial
-    padding: 16px 31px
-    text-decoration: none
-    text-shadow: 0px 1px 0px #2f6627
-    margin: 9px 30px -7px 199px
-    &:hover
-      background-color: #859900
-    &:active
-      position: relative
-      top: 1px
+  margin: 0 auto
+  max-width: 300px
