--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Ubuntu+Mono" type="text/css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script src="http://code.jquery.com/jquery-2.2.1.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" crossorigin="anonymous"></script>
-  <script src="/assets/javascript/overlay.js"></script>
 
   <!-- Google Analytics -->
   <script>
