--- a/_sass/_presentation-card.sass
+++ b/_sass/_presentation-card.sass
@@ -15,6 +15,7 @@
   p
     color: $my_base3
     font-family: 'Ubuntu'
+    font-size: 20px
   .social-icons
     a:link, a:visited, a:hover, a:active
       text-decoration: none
