--- a/_sass/_presentation-card.sass
+++ b/_sass/_presentation-card.sass
@@ -1,6 +1,10 @@
 .full-screen
   height: 100vh
 
+@media screen and (max-width: 350px)
+  .full-screen
+    height: 630px
+
 #presentation-card
   background-color: $my_base02
   padding: 2em
