Add sample code section and modify presentation text

--- a/_sass/_presentation-card.sass
+++ b/_sass/_presentation-card.sass
@@ -1,9 +1,5 @@
 .full-screen
-  height: 100vh
-
-@media screen and (max-width: 350px)
-  .full-screen
-    height: 630px
+  min-height: 100vh
 
 #presentation-card
   background-color: $my_base02
