Move section related styles to new sass file. And add titles on sections

--- a/assets/stylesheets/main.sass
+++ b/assets/stylesheets/main.sass
@@ -2,7 +2,8 @@
 ---
 
 @import "colors"
+@import "format_section"
 @import "presentation-card"
-@import "sample-code-container"
+@import "sample-code"
 @import "contact-form"
 
