Add meetup icon, Add dev.to link.

--- a/_sass/_presentation-card.sass
+++ b/_sass/_presentation-card.sass
@@ -18,6 +18,11 @@
       text-decoration: none
       color: $my_base3
       padding: 1em
+    .invert-svg-color
+      -webkit-filter: invert(100%)
+      filter: invert(100%)
+    .fix-margin
+      margin-bottom: 10px
   .hire-me
     color: $my_magneta
     font-size: 1.7em
