--- a/_layouts/resume_layout.html
+++ b/_layouts/resume_layout.html
@@ -11,6 +11,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+  <link rel="stylesheet" href="/assets/stylesheets/resume.css" type="text/css"></script>
+
   <!-- Google Analytics -->
   <script>
     window.ga = window.ga || function() {
