--- a/assets/stylesheets/resume.sass
+++ b/assets/stylesheets/resume.sass
@@ -1,5 +1,28 @@
 ---
 ---
 
+body
+  font-family: Helvetica Neue,Helvetica,Arial,Liberation Sans,Roboto,Noto,sans-serif
+  font-size: 1.1rem
+  letter-spacing: -.06px
+  font-weight: 400
+  line-height: 1.34
+
 .gravatar
   border-radius: 50%
+
+.only-print
+  display: none
+
+@media print
+  .no-print
+    display: none
+  .pagebreak
+    clear: both
+    page-break-after: always
+  .print-footer
+    display: block
+    position: fixed
+    bottom: 0
+    right: 30
+
