--- a/assets/stylesheets/resume.sass
+++ b/assets/stylesheets/resume.sass
@@ -14,6 +14,14 @@ body
 .only-print
   display: none
 
+.print-button
+  position: fixed
+  top: 10px
+  right: 100px
+  img
+    height: 40
+    width: 40
+
 @media print
   .no-print
     display: none
