--- a/assets/stylesheets/resume.sass
+++ b/assets/stylesheets/resume.sass
@@ -34,3 +34,10 @@ body
     bottom: 0
     right: 30
 
+.col-container
+  display: table
+  width: 100%
+
+.col
+  display: table-cell
+  width: auto
