--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" crossorigin="anonymous"></script>
   <script src="/assets/javascript/main.js"></script>
 
+  {% if jekyll.environment == "production" %}
   <!-- Google Analytics -->
   <script>
     window.ga = window.ga || function() {
@@ -25,6 +26,7 @@
   </script>
   <script async src='//www.google-analytics.com/analytics.js'></script>
   <!-- End Google Analytics -->
+  {% endif %}
 </head>
 
 <body>
