--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -5,32 +5,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>M.Bellucci</title>
-  <link rel="stylesheet" href="/assets/stylesheets/main.css" type="text/css">
+  <!-- BOOTSTRAP -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" crossorigin="anonymous">
+  <!-- FONTAWESOME -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- JQUERY -->
+  <script src="https://code.jquery.com/jquery-2.2.1.js"></script>
+  <!-- GOOGLE FONTS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" type="text/css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" type="text/css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://code.jquery.com/jquery-2.2.1.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" crossorigin="anonymous"></script>
-  <script src="/assets/javascript/main.js"></script>
 
-  {% if jekyll.environment == "production" %}
-  <!-- Google Analytics -->
-  <script>
-    window.ga = window.ga || function() {
-      (ga.q = ga.q || []).push(arguments)
-    };
-    ga.l = +new Date;
-    ga('create', 'UA-59786404-1', 'auto');
-    ga('send', 'pageview');
-  </script>
-  <script async src='//www.google-analytics.com/analytics.js'></script>
-  <!-- End Google Analytics -->
-  {% endif %}
+  <!-- MAIN Assets -->
+  <script src="/assets/javascript/main.js"></script>
+  <link rel="stylesheet" href="/assets/stylesheets/main.css" type="text/css">
+
+  {% include google_analytics.html %}
 </head>
 
 <body>
+  <header>{% include nav.html %}</header>
   {{ content }}
+  <footer></footer>
 </body>
 
 </html>
