--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -5,8 +5,8 @@
     </div>
 
     <ul class="nav navbar-nav">
-      <li><a href="/blog.html">Blog</a></li>
-      <li><a href="/projects.html">Projects</a></li>
+      <!-- <li><a href="/blog.html">Blog</a></li> -->
+      <!-- <li><a href="/projects.html">Projects</a></li> -->
       <li><a href="/contact.html">Contact</a></li>
       <li><a target='_blank' href="/resume.html">Resume</a></li>
     </ul>
