--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -1,15 +1,22 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/"> M. Bellucci </a>
-    </div>
+<style>
+nav {
+  margin-bottom: 5vh;
+}
+</style>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/">M. Bellucci</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
     <ul class="nav navbar-nav">
-      <!-- <li><a href="/blog.html">Blog</a></li> -->
-      <!-- <li><a href="/projects.html">Projects</a></li> -->
-      <li><a href="/contact.html">Contact</a></li>
-      <li><a target='_blank' href="/resume.html">Resume</a></li>
+      <!-- <li class='nav&#45;item'><a class='nav&#45;link' href="/blog.html">Blog</a></li> -->
+      <li class='nav-item'><a class='nav-link' href="/projects.html">Projects</a></li>
+      <li class='nav-item'><a class='nav-link' href="/contact.html">Contact</a></li>
+      <li class='nav-item'><a class='nav-link' target='_blank' href="/resume.html">Resume</a></li>
     </ul>
   </div>
 </nav>
-
