Move social icons to its own file

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,5 +5,10 @@ layout: default
 <header>{% include nav.html %}</header>
 <div class="container">
   {{ content  }}
+
+  <footer class='row'>
+    <div class='col'>
+      <!-- {% include social_icons.html %} -->
+    </div>
+  </footer>
 </div>
-<footer></footer>
