--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,6 +13,7 @@ nav {
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav">
       <!-- <li class='nav&#45;item'><a class='nav&#45;link' href="/blog.html">Blog</a></li> -->
+      <li class='nav-item'><a class='nav-link' href="/about-me.html">About Me</a></li>
       <li class='nav-item'><a class='nav-link' href="/projects.html">Projects</a></li>
       <li class='nav-item'><a class='nav-link' href="/contact.html">Contact</a></li>
       <li class='nav-item'><a class='nav-link' target='_blank' href="/resume.html">Resume</a></li>
