Update about me

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,9 @@
   <!-- MAIN Assets -->
   <link rel="stylesheet" href="/assets/stylesheets/main.css" type="text/css">
 
+  <!-- DEV ICONS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
+
   {% include google_analytics.html %}
 </head>
 
