--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,9 @@ nav {
 </style>
 
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">M. Bellucci</a>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <a class="navbar-brand" href="/">M. Bellucci</a>
+  </div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -13,10 +15,17 @@ nav {
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav">
       <!-- <li class='nav&#45;item'><a class='nav&#45;link' href="/blog.html">Blog</a></li> -->
-      <li class='nav-item'><a class='nav-link' href="/about-me.html">About Me</a></li>
-      <li class='nav-item'><a class='nav-link' href="/projects.html">Projects</a></li>
-      <li class='nav-item'><a class='nav-link' href="/contact.html">Contact</a></li>
+      <li class='nav-item'><a class='nav-link' href="/oss_contributions.html">Open Source</a></li>
+      <li class='nav-item'><a class='nav-link' href="/portfolio.html">Portfolio</a></li>
       <li class='nav-item'><a class='nav-link' target='_blank' href="/resume.html">Resume</a></li>
+    </ul>
+  </div>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        {% include social_icons.html %}
+      </li>
     </ul>
   </div>
 </nav>
