--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@ nav {
 
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <a class="navbar-brand" href="/">M. Bellucci</a>
+    <a class="navbar-brand" href="/">Marcos Bellucci</a>
   </div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -14,6 +14,7 @@ nav {
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav">
+      <li class='nav-item'><a class='nav-link' href="/index.html">Home</a></li>
       <li class='nav-item'><a class='nav-link' href="/portfolio.html">Portfolio</a></li>
       <li class='nav-item'><a class='nav-link' target='_blank' href="/resume.html">Resume</a></li>
     </ul>
